# market_data_001

./: DEPLOYMENT.md  Dockerfile  README.md  docker-compose.md  docker-compose.yml  pyproject.toml
k8s/: api-deployment.yaml  configmap.yaml  ingestion-job.yaml  ingress.yaml  kustomization.yaml  market-data-job.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  secret.yaml
src/: config.py  database.py  ingestion.py  server.py
tests/: conftest.py  test_ingestion.py
