[project]
name = "project-001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
    "yfinance>=1.5.1",
]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "pandas.*", 
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
